--- a/catraca/restful/static/index.html
+++ b/catraca/restful/static/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br" >
 <head>
-<meta charset="UTF-8" />
-<title>API Catraca - protótipo</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>API Catraca - Cliente prot&oacute;tipo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" />
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
@@ -12,12 +12,12 @@
 <body>
     <div class="navbar">
         <div class="navbar-inner">
-            <a class="brand" href="#">API RESTful Catraca - protótipo</a>
+            <a class="brand" href="#">API RESTful Catraca - Cliente prot&oacute;tipo</a>
         </div>
     </div>
     <div id="main" class="container">
         <table class="table table-striped">
-            <tr><td style="width: 1px;"></td><td><b>Descrição</b></td><td><b>Opção</b></td></tr>
+            <tr><td style="width: 1px;"></td><td><b>Descri&ccedil;&atilde;o</b></td><td><b>Op&ccedil;&atilde;o</b></td></tr>
             <!-- ko foreach: tasks -->
             <tr>
                 <td>
@@ -42,19 +42,19 @@
     </div>
     <div id="add" class="modal hide fade" tabindex="=1" role="dialog" aria-labelledby="addDialogLabel" aria-hidden="true">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">Ã—</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">A&ccedil;&atilde;o</button>
             <h3 id="addDialogLabel">Nova Tarefa</h3>
         </div>
         <div class="modal-body">
             <form class="form-horizontal">
                 <div class="control-group">
-                    <label class="control-label" for="inputTask">Título</label>
+                    <label class="control-label" for="inputTask">T&iacute;tulo</label>
                     <div class="controls">
                         <input data-bind="value: title" type="text" id="inputTask" placeholder="Informe o título da tarefa" style="width: 150px;">
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label" for="inputDescription">Descrição</label>
+                    <label class="control-label" for="inputDescription">Descri&ccedil;&atilde;o</label>
                     <div class="controls">
                         <input data-bind="value: description" type="text" id="inputDescription" placeholder="Informe uma descrição" style="width: 300px;">
                     </div>
@@ -68,7 +68,7 @@
     </div>
     <div id="edit" class="modal hide fade" tabindex="=1" role="dialog" aria-labelledby="editDialogLabel" aria-hidden="true">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">Ã—</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">A&ccedil;&atilde;o</button>
             <h3 id="editDialogLabel">Edita Tarefa</h3>
         </div>
         <div class="modal-body">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label" for="inputDescription">Descrição</label>
+                    <label class="control-label" for="inputDescription">Descri&ccedil;&atilde;o</label>
                     <div class="controls">
                         <input data-bind="value: description" type="text" id="inputDescription" placeholder="Informe uma descrição" style="width: 300px;">
                     </div>
@@ -101,12 +101,12 @@
     </div>
     <div id="login" class="modal hide fade" tabindex="=1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
         <div class="modal-header">
-            <h3 id="loginLabel">Área Restrita</h3>
+            <h3 id="loginLabel">&Aacute;rea Restrita</h3>
         </div>
         <div class="modal-body">
             <form class="form-horizontal">
                 <div class="control-group">
-                    <label class="control-label" for="inputUsername">Usuário</label>
+                    <label class="control-label" for="inputUsername">Usu&aacute;rio</label>
                     <div class="controls">
                         <input data-bind="value: username" type="text" id="inputUsername" placeholder="Informe o usuario">
                     </div>
@@ -126,7 +126,7 @@
     <script type="text/javascript">
         function TasksViewModel() {
             var self = this;
-            self.tasksURI = 'http://192.168.1.253:8089/api/tasks';
+            self.tasksURI = 'http://10.5.2.253:27289/api/catraca'; //37389
             self.username = "";
             self.password = "";
             self.tasks = ko.observableArray();
