Desenvolvendo api webservice RESTful da catraca.

--- a/catraca/restful/static/index.html
+++ b/catraca/restful/static/index.html
@@ -141,8 +141,7 @@
                     dataType: 'json',
                     data: JSON.stringify(data),
                     beforeSend: function (xhr) {
-                        xhr.setRequestHeader("Authorization", 
-                            "Basic " + btoa(self.username + ":" + self.password));
+                        xhr.setRequestHeader("Authorization", "Basic " + btoa(self.username + ":" + self.password));
                     },
                     error: function(jqXHR) {
                         console.log("ajax error " + jqXHR.status);
